style.css
.wrapper {
    padding: 10px 35px;
}

.title {
    font-weight: 300;
}

.button {
    max-width: 150px;
    background-color: #460EDE;
    color: #ffffff;
    font-weight: 300;
    padding: 10px 30px;
    border-radius: 10px;
    box-shadow: 0 3px 6px #00000029;
}

.header__wrapper {
    padding: 25px 20px;
    display: flex;
    justify-content: space-between;
}

.header__logo-wrapper {
    width: 41%;
    max-width: 155px;
}

.header__button {
    display: none;
    width: 130px;
}

.sitetoolbar {
    display: flex;
    align-items: center;
}

.sitetoolbar__button {
    position: relative;
    width: 45px;
    height: 21px;
}

.sitetoolbar__button-line, .sitetoolbar__button-line::before, .sitetoolbar__button-line::after {
    position: absolute;
    top: 50%;
    left: 0;
    margin-top: -1px;
    width: 45px;
    height: 2px;
    background-color: #222222;
}

.sitetoolbar__button-line::before, .sitetoolbar__button-line::after {
    content: '';
    display: block;
}

.sitetoolbar__button-line::before {
    transform: translateY(-9px);
}

.sitetoolbar__button-line::after {
    transform: translateY(9px);
}

.main__content {
    padding: 15px 0;
}

.days-timer {
    display: flex;
    justify-content: space-between;
    padding: 5px 10px;
    padding-right: 15px;
    align-items: center;
    background-color: #242424;
    color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 3px 6px #0000003c;
}

.days-timer__text {
    font-size: 12px;
}

.days-timer__counter-wrapper {
    display: flex;
    align-items: center;
}

.days-timer__counter-text {
    font-size: 16px;
    font-style: italic;
    font-weight: 900;
    margin-right: 10px;
}

.days-timer__picture-wrapper {
    width: 23px;
}

.menu {
    display: grid;
    justify-items: center;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(4, 1fr);
    grid-row-gap: 45px;
    padding: 30px 0;
}

.menu__section {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 10px;
    width: 82%;
    border-radius: 10px;
    background: linear-gradient(to bottom, #ffffff 82%, #242424 18%);
    box-shadow: 0 3px 6px #0000003c;
}

.menu__section-title {
    text-align: left;
    font-size: 14px;
    max-width: 92px;
    word-wrap: break-word;
}

.menu__section-image-projects-search {
    width: 43%;
    position: relative;
    right: 4%;
}

.menu__section-image-create-project {
    width: 58%;
    position: relative;
    bottom: 12px;
}

.menu__section-image-hackathons {
    width: 51%;
    position: relative;
    top: 10px;
}

.menu__section-image-about-project-activities {
    width: 31%;
    position: relative;
    top: 8px;
    right: 2%;
}

.announcement-board {
    background-color: #ffffff;
    color: #ffffff;
    box-shadow: 0 3px 6px #0000003c;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.announcement-board__title-wrapper {
    background-color: #242424;
    border-radius: 10px 10px 0 0;
    padding: 10px 10px;
}

.announcement-board__title {
    font-size: 14px;
}

.announcement-board__announcements-wrapper {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: #ffffff;
    border-radius: 0 0 10px 10px;
}

.announcement-board__announcements {
    padding: 25px 10px;
    padding-bottom: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 270px;
    overflow-y: scroll;
}

.announcement-board__announcement {
    width: 100%;
    background-color: #242424;
    border-radius: 20px;
    box-shadow: 0 3px 6px #00000029;
    padding: 10px 15px;
    margin-bottom: 20px;
}

.announcement-board__announcement:last-of-type {
    margin-bottom: 0;
}

.announcement-board__text {
    word-wrap: break-word;
    font-size: 12px;
}

.announcement-board__author {
    word-wrap: break-word;
    font-size: 10px;
    text-decoration: underline;
}

.announcement-board__button-wrapper {
    display: flex;
    justify-content: center;
    padding-bottom: 20px;
    padding-top: 30px;
}

.modal-wrapper {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    justify-content: center;
    align-items: center;
    padding: 0 20px;
    z-index: 5;
}

.modal-wrapper.active {
    display: flex;
}

.modal {
    position: relative;
    width: 100%;
    max-width: 800px;
    background-color: #ffffff;
    border-radius: 10px;
    padding: 40px 15px;
    padding-top: 60px;
}

.modal__content {
    width: 100%;
    max-width: 430px;
    margin: 0 auto;
}

.modal__close-button-wrapper {
    position: absolute;
    top: 20px;
    right: 15px;
    width: 22px;
    height: 22px;
}

.modal__close-button {
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal__title {
    font-size: 20px;
    margin-bottom: 24px;
}

.modal__form {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.modal__input {
    width: 100%;
    margin-bottom: 24px;
    height: 40px;
    border: 1px solid #bebebe;
    border-radius: 10px;
    outline: none;
    padding: 0 15px;
    font-size: 14px;
    color: #242424;
}

.modal__textarea {
    width: 100%;
    margin-bottom: 24px;
    border: 1px solid #bebebe;
    border-radius: 10px;
    height: 120px;
    padding: 10px 15px;
    font-family: 'Roboto', sans-serif;
    font-size: 14px;
    resize: none;
}

.modal__textarea--mb40 {
    margin-bottom: 40px;
}



@media (min-width: 360px) {
    .days-timer__text {
        font-size: 14px;
    }

    .days-timer__counter-text {
        font-size: 18px;
    }

    .menu__section-title {
        font-size: 16px;
        max-width: 108px;
    }

    .days-timer__counter-wrapper {
        width: 38%;
        justify-content: flex-end;
    }

    .days-timer {
        padding: 10px 15px;
    }

    .announcement-board__title {
        font-size: 16px;
    }
    
    .announcement-board__text {
        font-size: 14px;
    }

    .announcement-board__author {
        font-size: 12px;
    }
}

@media (min-width: 420px) {
    .wrapper {
        max-width: 420px;
        margin: 0 auto;
    }
}

@media (min-width: 768px) {
    .wrapper {
        max-width: 600px;
        margin: 0 auto;
        padding: 10px 0;
    }

    .header__wrapper {
        padding: 25px 0;
    }

    .main__content {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 80px 1fr;
        grid-row-gap: 30px;
    }

    .days-timer {
        grid-area: 2 / 1 / 3 / 2;
    }

    .menu {
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(2, 1fr);
        grid-column-gap: 40px;
        grid-row-gap: 30px;
        grid-area: 1 / 1 / 2 / 2;
        padding: 0;
    }

    .main__announcement-board {
        grid-area: 3 / 1 / 4 / 2;
    }

    .menu__section {
        width: 100%;
    }

    .announcement-board__announcements {
        padding: 25px 15px;
        padding-bottom: 10px;
        height: 320px;
    }
}

@media (min-width: 1024px) {
    .wrapper {
        max-width: 1100px;
        padding: 10px 80px;
    }

    .header__wrapper {
        max-width: 1200px;
        padding: 30px 40px;
    }

    .sitetoolbar {
        display: none;
    }

    .header__button {
        display: block;
    }

    .main__content {
        grid-template-columns: 1.65fr 1fr;
        grid-template-rows: 1fr 90px;
        grid-column-gap: 50px;
        grid-row-gap: 30px;
        padding: 30px 0;
    }

    .main__announcement-board {
        grid-area: 1 / 2 / 3 / 3;
    }
}

@media (min-width: 1300px) {
    .wrapper {
        max-width: 1080px;
        padding: 10px 0;
    }

    .header__wrapper {
        max-width: 1200px;
        padding: 30px 0;
    }

    .main__content {
        grid-column-gap: 100px;
        grid-row-gap: 35px;
    }

    .menu {
        grid-column-gap: 100px;
    }

    .days-timer__text {
        font-size: 20px;
    }

    .days-timer__counter-text {
        font-size: 32px;
    }

    .menu__section-title {
        font-size: 20px;
        max-width: 132px;
    }

    .announcement-board__title {
        font-size: 20px;
    }

    .announcement-board__text {
        font-size: 17px;
    }

    .announcement-board__author {
        font-size: 12px;
    }

    .button {
        font-size: 18px;
    }

    .title {
        font-size: 32px;
    }
}

@media (min-width: 1500px) {
    .wrapper {
        max-width: 70%;
    }

    .header__wrapper {
        max-width: 80%;
        padding-bottom: 40px;
    }

    .header__logo-wrapper {
        max-width: 170px;
    }
}

